--- a/shoulder-build/shoulder-base/shoulder-api-doc/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-api-doc/pom.xml
@@ -12,6 +12,7 @@
 
     <artifactId>shoulder-api-doc</artifactId>
     <name>${project.artifactId}</name>
+    <url>https://doc.itlym.cn</url>
     <description>
         Shoulder 基于 OpenApi 规范做了依赖选型，通过扫描标准 Swagger 注解自动生成 api 生成文档。该模块仅几Kb，仅包含依赖管理。
     </description>
