--- a/shoulder-build/shoulder-base/shoulder-batch/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-batch/pom.xml
@@ -12,6 +12,7 @@
 
     <artifactId>shoulder-batch</artifactId>
     <name>${project.artifactId}</name>
+    <url>https://doc.itlym.cn</url>
     <description>
         Shoulder 扩展-批处理模块，提供批量数据导入、导出、异步校验、导入历史记录管理等能力。
     </description>
