--- a/shoulder-build/shoulder-starters/shoulder-starter/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter/pom.xml
@@ -12,6 +12,7 @@
 
     <artifactId>shoulder-starter</artifactId>
     <name>${project.artifactId}</name>
+    <url>https://doc.itlym.cn</url>
     <description>
         Shoulder 开箱即用的依赖包，引入了 shoulder-core 与 shoulder-autoconfiguration。
     </description>
