--- a/shoulder-build/shoulder-base/shoulder-crypto-negotiation/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-crypto-negotiation/pom.xml
@@ -12,6 +12,7 @@
 
     <artifactId>shoulder-crypto-negotiation</artifactId>
     <name>${project.artifactId}</name>
+    <url>https://doc.itlym.cn</url>
     <description>
         Shoulder 提供的 协商加密模块，用于非信任网络环境下的安全通信。基于 DH + ECC 实现先进的加密算法协商算法，比传统的 DH + DES 协商算法性能显著更高，更安全。
     </description>
