--- a/shoulder-build/shoulder-base/shoulder-crypto/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-crypto/pom.xml
@@ -12,6 +12,7 @@
 
     <artifactId>shoulder-crypto</artifactId>
     <name>${project.artifactId}</name>
+    <url>https://doc.itlym.cn</url>
     <description>
         Shoulder 提供的 加密模块，提供了 AES、RSA、ECC、MD5、SHA 等先进安全算法，并额外实现绝密级别的本地加密算法。
     </description>
