cicd build cache

--- a/.drone.yml
+++ b/.drone.yml
@@ -18,6 +18,9 @@ steps:
     image: cnlym/maven:3-jdk-21-alpine-aliyun
     # 加速，对于这种稳定的容器
     pull: if-not-exists
+    volumes:
+      - name: mvnCache
+        path: /root/.m2
     commands:
       # 异步快速检查依赖
       - curl --location --request POST 'http://autopom.itlym.cn:12345/projects/create' --form 'email=cn_lym@foxmail.com' --form 'pomXml=@shoulder-dependencies/pom.xml' --form 'notifyInstantlyAfterCheck=true' --form 'notifyReason=CI-<a href="https://git.itlym.cn/gogs/${DRONE_REPO_NAME}">${DRONE_REPO_NAME}::${DRONE_REPO_BRANCH}</a><br> with <a href="https://drone.itlym.cn/gogs/${DRONE_REPO_NAME}/${DRONE_BUILD_NUMBER}">Drone Build-${DRONE_BUILD_NUMBER}</a><br>' || echo '======= SKIP dependency check. ======='
@@ -47,6 +50,11 @@ steps:
     when:
       # CANLCEL 不通知
       status: [failure, success]
+
+volumes:
+  - name: mvnCache
+    host:
+      path: /tmp/cache/.m2
 
 trigger:
   branch:
