--- a/shoulder-build/shoulder-starters/shoulder-starter-operation-log/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-operation-log/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-parent</artifactId>
-        <version>1.0.0-PRE-SNPASHOT</version><!-- shoulder-version -->
+        <version>1.0.0-M1</version><!-- shoulder-version -->
         <relativePath>../../../shoulder-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
