--- a/shoulder-archetype-simple/src/main/resources/archetype-resources/src/main/resources/application.yml
+++ b/shoulder-archetype-simple/src/main/resources/archetype-resources/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: @project.name@
+    name: @appName@
 
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
