--- a/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
+++ b/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -20,7 +20,7 @@
     <properties>
         <java.version>17</java.version>
         <shoulder.version>1.0.0-M3</shoulder.version><!-- shoulder-version -->
-
+        <appName>${project.name}</appName>
         <errorCodePrefix>"0x000b"</errorCodePrefix><!-- todo 请确保每个应用错误码唯一 -->
     </properties>
 
