--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -170,7 +170,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${maven-compiler-plugin.version}</version>
+<!--                    <version>${maven-compiler-plugin.version}</version>-->
                     <configuration>
                         <!-- UTF8 coding -->
                         <encoding>${project.build.sourceEncoding}</encoding>
@@ -294,7 +294,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
-                    <version>${maven-source-plugin.version}</version>
+<!--                    <version>${maven-source-plugin.version}</version>-->
                     <configuration>
                         <attach>true</attach>
                     </configuration>
@@ -312,7 +312,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>${maven-javadoc-plugin.version}</version>
+<!--                    <version>${maven-javadoc-plugin.version}</version>-->
                     <configuration>
                         <encoding>${maven.javadoc.charset}</encoding>
                         <charset>${maven.javadoc.charset}</charset>
@@ -387,7 +387,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
-                    <version>${maven-gpg-plugin.version}</version>
+<!--                    <version>${maven-gpg-plugin.version}</version>-->
                     <executions>
                         <execution>
                             <id>sign-artifacts</id>
@@ -417,7 +417,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>${maven-surefire-plugin.version}</version>
+<!--                    <version>${maven-surefire-plugin.version}</version>-->
                     <configuration>
                         <!-- 这里参数可能影响使用者，暂时约定需要带 Test 后缀 -->
                         <includes>
@@ -482,7 +482,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>${maven-jar-plugin.version}</version>
+<!--                    <version>${maven-jar-plugin.version}</version>-->
                     <configuration>
                         <archive>
                             <index>true</index>
@@ -501,6 +501,31 @@
                                 <Built-By>${env.USERNAME}</Built-By>
                             </manifestEntries>
                         </archive>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <mainClass>${start-class}</mainClass>
+                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            </manifest>
+                        </archive>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <configuration>
+                        <propertiesEncoding>${project.build.sourceEncoding}</propertiesEncoding>
+                        <delimiters>
+                            <delimiter>${resource.delimiter}</delimiter>
+                        </delimiters>
+                        <useDefaultDelimiters>false</useDefaultDelimiters>
                     </configuration>
                 </plugin>
 
