feature: Web ext(dict tag..) url 更换为复数；fix oplog；添加 oplog 查询页面；增加 oplog 拦截器允许自定义跳过记录；优化batch模块大量功能；优化 db 模块未添加 @TableField 时的使用

--- a/shoulder-build/shoulder-base/shoulder-web/src/main/resources/shoulder/pages/dictionaryQueryPage.html.config
+++ b/shoulder-build/shoulder-base/shoulder-web/src/main/resources/shoulder/pages/dictionaryQueryPage.html.config
@@ -16,7 +16,7 @@
         $(document).ready(function () {
             function queryAllDictionary() {
                 $.ajax({
-                    url: host + '##DICTIONARY_API_PATH##/type/all',
+                    url: host + '##DICTIONARY_API_PATH##/types/listAll',
                     method: 'GET',
                     success: function (response) {
                         if (response.code == '0') {
@@ -92,7 +92,7 @@
             //querySingleDictionaryItems('AttitudeRelatedTypeEnum');
 
         });
-        var host='CONFIG_PAGE_HOST';
+        var host='SHOULDER_PAGE_HOST';
     </script>
 </head> <body>
 <!-- 页面主体部分 -->
