--- a/shoulder-build/shoulder-base/shoulder-web/src/main/resources/shoulder/pages/operationLogQueryPage.html.config
+++ b/shoulder-build/shoulder-base/shoulder-web/src/main/resources/shoulder/pages/operationLogQueryPage.html.config
@@ -689,13 +689,13 @@
                 <svg class="btn-icon" viewBox="0 0 24 24">
                     <path d="M12 5V2L8 6l4 4V7c3.31 0 6 2.69 6 6 0 2.97-2.17 5.43-5 5.91v2.02c3.95-.49 7-3.85 7-7.93 0-4.42-3.58-8-8-8zm-6 8c0-1.65.67-3.15 1.76-4.24L6.34 7.34C5.56 8.12 5 9.21 5 10.5c0 2.61 2.12 4.73 4.75 4.75l1.25-.01v-2l-1.25.01c-1.52-.01-2.75-1.24-2.75-2.74z"/>
                 </svg>
-                重置条件
+                重置
             </button>
             <button class="primary" id="search" aria-label="执行查询（快捷键：Enter）" role="button" tabindex="0">
                 <svg class="btn-icon" viewBox="0 0 24 24">
                     <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
                 </svg>
-                立即查询
+                查询
             </button>
         </div>
     </div>
@@ -827,10 +827,10 @@
                 const duration = new Date(log.endTime) - new Date(log.operationTime);
 
                 row.innerHTML = `
-                      <td>${log.userRealName || log.userId}</td>
+                      <td title="${log.userId || '-'}">${log.userRealName || log.userName || log.userId}</td>
                       <td>${log.operation}</td>
                       <td>${log.objectType || '-'}</td>
-                      <td>${log.terminalType}</td>
+                      <td title="${log.terminalAddress || '-'}">${log.terminalType}</td>
                       <td class="time-column">${this.formatDateTime(log.operationTime)}</td>
                       <td>${this.formatDuration(duration)}</td>
                       <td>
@@ -864,7 +864,7 @@
                                     title="复制完整日志">
                             <svg class="btn-icon" viewBox="0 0 24 24">
                                 <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
-                              </svg>复制完整日志
+                              </svg>复制日志
                           </button>
                       </td>
                     `;
